--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/product-placeholder.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,10 +76,10 @@ flutter:
   fonts:
     - family: Lato
       fonts:
-        - asset: assets\fonts\Lato-Regular.ttf
-        - asset: assets\fonts\Lato-Bold.ttf
+        - asset: assets/fonts/Lato-Regular.ttf
+        - asset: assets/fonts/Lato-Bold.ttf
           weight: 700
     - family: Anton
       fonts:
-        - asset: assets\fonts\Anton-Regular.ttf
+        - asset: assets/fonts/Anton-Regular.ttf
 
